--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -74,6 +74,12 @@ nav a {
     margin-left: 20px;
 }
 
+hr {
+    margin-top: 20px;
+    color: black;
+    
+}
+
 button {
     background-color: white;
     color: black;
